// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  margin-top: 0.75rem;
  margin-bottom: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>label>input {
  margin-right: 0.5rem;
  margin-left: 0rem;
}

.emotion-0>label {
  cursor: pointer;
  color: muted;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 label:not(:last-child) {
  margin-right: 1.5rem;
}

<div
    class="emotion-0"
    role="group"
  >
    <input
      readonly=""
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup should match snapshot with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
}

<label
    class="emotion-0"
  >
    label
  </label>
  .emotion-0 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  margin-top: 0.75rem;
  margin-bottom: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>label>input {
  margin-right: 0.5rem;
  margin-left: 0rem;
}

.emotion-0>label {
  cursor: pointer;
  color: muted;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 label:not(:last-child) {
  margin-right: 1.5rem;
}

<div
    class="emotion-0"
    role="group"
  >
    <input
      readonly=""
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;
